landing page fix

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,10 @@
 
 // Variables
 @import "variables";
+@import "common";
 
 // Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+// font awesome
+@import "~font-awesome/scss/font-awesome.scss";
