--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -3,3 +3,23 @@
   //padding: 12px 15px 12px 15px;
   //background: #1a1a1a;
 }
+
+//$break-small: 320px;
+//
+//.con-main {
+//  @media screen and (max-width: $break-small) {
+//    width: 100%;
+//    display: flex !important;
+//    flex-direction: column !important;
+//    background: red !important;
+//  }
+//}
+
+/*.slide-main {
+  @media screen and (max-width: $break-small) {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}*/
+
