--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -82,12 +82,41 @@
     font-size: 26px;
   }
 }
-
+.aaa{
+  width: 100%;
+  text-align: left;
+  border: 1px solid #f89a00;
+  border-radius: 6px;
+  padding: 10%;
+  background: #f8b500;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
 .admin-sidebar{
   //border: 1px solid #2b2b2b !important;
   //border-radius: 5px;
   ul{
     li{
+
+      a{
+        &:hover{
+          color: black;
+        }
+
+        &:focus{
+          width: 100%;
+          text-align: left;
+          border: 1px solid #f89a00;
+          border-radius: 6px;
+          padding: 10%;
+          background: #f8b500;
+          color: black;
+          font-size: 20px;
+          font-weight: bold;
+        }
+      }
+
       width: 100%;
       text-align: left;
       border: 1px solid black;
@@ -96,7 +125,70 @@
       color: #fff;
       font-size: 20px;
       font-weight: bold;
+
+      &:hover{
+        width: 100%;
+        text-align: left;
+        border: 1px solid #f89a00;
+        padding: 10%;
+        background: #f8b500;
+        color: black;
+        font-size: 20px;
+        font-weight: bold;
+      }
+
+      &:focus{
+        width: 100%;
+        text-align: left;
+        border: 1px solid #f89a00;
+        padding: 10%;
+        background: #f8b500;
+        color: black;
+        font-size: 20px;
+        font-weight: bold;
+      }
+
+      &:active{
+        width: 100%;
+        text-align: left;
+        border: 1px solid #f89a00;
+        padding: 10%;
+        background: #f8b500;
+        color: black;
+        font-size: 20px;
+        font-weight: bold;
+      }
     }
   }
+}
+
+.add-button{
+
+  button{
+    color: #fff;
+    &:hover{
+      color: #fff;
+    }
+  }
+
+  border: 1px solid #f89a00;
+  color: #fff;
+  background: #f8b500;
+  padding: 1%;
+
+  &:hover{
+    border: 1px solid #f89a00;
+    color: #fff;
+    background: #f89a00;
+    padding: 1%;
+  }
+}
+
+.breadcrumb{
+  border: 1px solid #f8b500;
+  background: #f8b5002b !important;
+  font-size: 14px;
+  border-radius: 0 !important;
+  //border-right: 0 !important;;
 }
 
