--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,6 +29,10 @@
   border-radius: 0 !important;
 }
 
+.panel textarea {
+  border-radius: 0 !important;
+}
+
 .panel button {
   border-radius: 0 !important;
   background: #f8b500;
@@ -169,6 +173,87 @@
 
 .cat-list li b a:hover {
   color: #fff;
+}
+
+.switch {
+  display: inline-block;
+  width: 60px;
+  height: 30px;
+  margin: 8px;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  position: relative;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 30px;
+  -webkit-box-shadow: 0 0 0 2px #777, 0 0 4px #777;
+          box-shadow: 0 0 0 2px #777, 0 0 4px #777;
+  cursor: pointer;
+  border: 4px solid transparent;
+  overflow: hidden;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #777;
+  border-radius: 30px;
+  -webkit-transform: translateX(-30px);
+          transform: translateX(-30px);
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(30px);
+          transform: translateX(30px);
+  background: #f8b500;
+}
+
+input:checked + .slider {
+  -webkit-box-shadow: 0 0 0 2px #f8b500,0 0 2px #f89a00;
+          box-shadow: 0 0 0 2px #f8b500,0 0 2px #f89a00;
+}
+
+.success-alert {
+  border: 1px solid #02bb1f;
+  text-align: center;
+  padding: 1%;
+  background: #02bb1f63;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.danger-alert {
+  border: 1px solid #bb1900;
+  text-align: center;
+  padding: 1%;
+  background: rgba(187, 25, 0, 0.25);
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.img-list {
+  width: 50px;
+  height: 35px;
+  border-radius: 7px;
+  border: 1px solid #f8b500;
 }
 
 /*!
